[package]
name = "rosbag2-rs"
version = "0.1.0"
edition = "2021"
description = "Rosbag2 writer and more..."
authors = ["CT <ctian.huang@gmail.com>"]
license = "MIT AND Apache-2.0"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
anyhow = "1.0.40"

[dev-dependencies]
tempfile = "3.8.1"

[profile.rust-analyzer]
inherits = "dev"
